# pash

./: .gitignore  ImageProcessing.hs  KaTeXify.hs  index.html  pash.cabal  site.hs
.github/workflows/: haskell.yml
css/: default.css  syntax.css
js/: imageGrid.js
posts/: hakyll-server-side-latex.md
templates/: default.html  post-list.html  post.html
