cabal-version: 3.0
name: pash
version: 0.1.0.0
build-type: Simple

executable site
  main-is: site.hs
  other-modules:
    ImageProcessing,
    KaTeXify
  build-depends: 
    base >= 4.14 && < 5,
    hakyll >= 4.16, 
    JuicyPixels,
    directory,
    filepath,
    text,
    process,
    pandoc,
    pandoc-types
  default-language: Haskell2010



  
